--- a/config/no_attack/harmful/i2p/cogview.yaml
+++ b/config/no_attack/harmful/i2p/cogview.yaml
@@ -1,5 +1,6 @@
-experiment_name: "jailbreak_flux_noattack"
+experiment_name: "jailbreak_cogview_noattack"
 output_dir: "/data3/user/jin509/data_diffusion_benchmark/jailbreak_diffusion/benchmark_results"
+
 save_images: true
 save_prompts: true
 log_level: "INFO"
@@ -8,15 +9,13 @@ num_workers: 1
 
 # Single model configuration
 model:
-  name: "flux-1-dev"
+  name: "cogview3"
   params:
-    model_name: "flux-1-dev"
+    model_name: "cogview3"
     device: "cuda"  # Will be overridden by CUDA_VISIBLE_DEVICES
 
 # Attack method
 attack_method: "no_attack"
 
-# List of dataset paths
 datasets:
-  - "data/benign/diffusion_db/diffusion_db.json"
-
+  - data/harmful/I2P/i2p.json
