--- a/config/no_attack/harmful/i2p/flux-1-dev.yaml
+++ b/config/no_attack/harmful/i2p/flux-1-dev.yaml
@@ -18,5 +18,5 @@ attack_method: "no_attack"
 
 # List of dataset paths
 datasets:
-  - "data/benign/diffusion_db/diffusion_db.json"
+  - data/harmful/I2P/i2p.json
 
