--- a/config/no_attack/benign/diffusion_db/stable-diffusion-xl-base-0.9.yaml
+++ b/config/no_attack/benign/diffusion_db/stable-diffusion-xl-base-0.9.yaml
@@ -17,4 +17,4 @@ model:
 attack_method: "no_attack"
 
 datasets:
-  - "data/benign/diffusion_db/diffusion_db.json"
+  - data/benign/diffusion_db/diffusion_db_benign_6000.json
