--- a/config/no_attack/benign/diffusion_db/stable-diffusion-3.5-large-turbo.yaml
+++ b/config/no_attack/benign/diffusion_db/stable-diffusion-3.5-large-turbo.yaml
@@ -17,7 +17,7 @@ model:
 attack_method: "no_attack"
 
 datasets:
-  - "data/benign/diffusion_db/diffusion_db.json"
+  - data/benign/diffusion_db/diffusion_db_benign_6000.json
 
 
 
