--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,10 +63,17 @@
             "cwd": "${workspaceFolder}",
             "args": [
                 "--config",
-                "evaluation_text_detector/config/distilbert_nsfw_text_checker.yaml"
+                // "evaluation_text_detector/config/distilbert_nsfw_text_checker.yaml"
+                // "evaluation_text_detector/config/distilroberta_nsfw_text_checker.yaml"
+                // "evaluation_text_detector/config/llama_guard.yaml"
+                // "evaluation_text_detector/config/NSFW_text_classifier.yaml"
+                // "evaluation_text_detector/config/nvidia_aegis.yaml"
+                
+                "evaluation_text_detector/config/google_text_checker.yaml"
             ],
             "env": {
-                "PYTHONPATH": "${workspaceFolder}"
+                "PYTHONPATH": "${workspaceFolder}",
+                "CUDA_VISIBLE_DEVICES": "1"
             }
         },
         {
