--- a/evaluation_text_detector/config/perspective_api.yaml
+++ b/evaluation_text_detector/config/perspective_api.yaml
@@ -3,15 +3,7 @@
 data_dir: "evaluation_text_detector/data"
 
 datasets:
-  i2p_filtered:
-    path: "data/harmful/I2P/I2P_filtered_test.json"
-
-  # i2p_filtered:
-  #   path: "evaluation_text_detector/data/I2P/I2P_filtered_test.json"
-
-  # test:
-  #   path: "evaluation_text_detector/data/harmful/test.json"
-
+  path: data/text_checker_eval/text_checker_eval.json
 
 
 output_dir: "evaluation_text_detector/results"
