--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,7 +69,13 @@
                 // "evaluation_text_detector/config/NSFW_text_classifier.yaml"
                 // "evaluation_text_detector/config/nvidia_aegis.yaml"
                 
-                "evaluation_text_detector/config/google_text_checker.yaml"
+                // "evaluation_text_detector/config/google_text_checker.yaml"
+
+
+                "evaluation_text_detector/config/openai_text_moderation.yaml"
+
+                // "evaluation_text_detector/config/gpt_4o_mini.yaml"
+
             ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}",
