--- a/config/DACA/stable-diffusion-3-medium.yaml
+++ b/config/DACA/stable-diffusion-3-medium.yaml
@@ -1,4 +1,4 @@
-experiment_name: "jailbreak_PGJ_stable-diffusion-v1-5"
+experiment_name: "jailbreak_PGJ_stable-diffusion-3-medium"
 output_dir: "benchmark_results"
 save_images: true
 save_prompts: true
@@ -7,9 +7,9 @@ batch_size: 1
 num_workers: 1
 
 model:
-  name: "stable-diffusion-v1-5"
+  name: "stable-diffusion-3-medium"
   params:
-    model_name: "stable-diffusion-v1-5"
+    model_name: "stable-diffusion-3-medium"
     device: "cuda"
 
 
