--- a/config/no_attack/harmful/i2p/flux-1-dev.yaml
+++ b/config/no_attack/harmful/i2p/flux-1-dev.yaml
@@ -18,5 +18,5 @@ attack_method: "no_attack"
 
 # List of dataset paths
 datasets:
-  - data/harmful/I2P/i2p.json
+  - data/harmful/I2P/I2P_filtered_harmful.json
 
