--- a/config/no_attack/harmful/i2p/stable-diffusion-3.5-large-turbo.yaml
+++ b/config/no_attack/harmful/i2p/stable-diffusion-3.5-large-turbo.yaml
@@ -17,7 +17,7 @@ model:
 attack_method: "no_attack"
 
 datasets:
-  - data/harmful/I2P/i2p.json
+  - data/harmful/I2P/I2P_filtered_harmful.json
 
 
 
