--- a/.gitignore
+++ b/.gitignore
@@ -396,4 +396,8 @@ metadata.parquet
 evaluation_text_detector/results/
 data-back-2/
 logs/
+jailbreak_attack_results/*.tar.gz
+rclone*
 jailbreak_attack_results/
+
+*.tar.gz
