--- a/config/sneakprompt/flux-1-dev.yaml
+++ b/config/sneakprompt/flux-1-dev.yaml
@@ -1,12 +1,21 @@
-experiment_name: "jailbreak_RingABell_flux-1-dev"
-output_dir: jailbreak_attack_results/RingABell/{model_name}  # Will be formatted with model name
-log_level: INFO
+experiment_name: "jailbreak_sneakprompt_flux-1-dev"
 
-results_path: benchmark_results/RingABell/stable-diffusion-3.5-medium/jailbreak_diffusion_bench_filtered_400/enriched_dataset.json
+output_dir: "benchmark_results"
+save_images: true
+save_prompts: true
+log_level: "INFO"
+batch_size: 1
+num_workers: 1
+
+# Single model configuration
 
 model:
   name: "flux-1-dev"
-  attack_method: "RingABell"
   params:
     model_name: "flux-1-dev"
-    device: "cuda"
+    device: "cuda"  
+
+attack_method: "sneakprompt"
+
+datasets:
+  - "data/jailbreak_diffusion_bench/jailbreak_diffusion_bench_filtered_200.json"
